crates/lang/macro/tests/ui/trait_def/fail/with_constructor.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait WithConstructor {
    #[ink(constructor)]
    fn new() -> Self;
}

fn main() {}
