crates/lang/macro/tests/ui/trait_def/fail/with_constructor.stderr
error: ink! trait definitions must not have constructors
 --> $DIR/with_constructor.rs:5:5
  |
5 | /     #[ink(constructor)]
6 | |     fn new() -> Self;
  | |_____________________^
